# jaanevis

./: .env.template  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
geonotes/: cli.py
geonotes/domain/: note.py
geonotes/repository/: memrepo.py
geonotes/requests/: __init__.py  add_note_request.py  base.py  note_list_request.py
geonotes/responses/: __init__.py  response.py
geonotes/serializers/: note_geojson_serializer.py  note_json_serializer.py
geonotes/ui/: app.js  index.html  main.js
geonotes/usecases/: add_note.py  note_list.py
jaanevis/: config.py  init.py
jaanevis/domain/: geojson.py  note.py  session.py  user.py
jaanevis/i18n/: __init__.py  messages.pot
jaanevis/repository/: __init__.py  base.py  memrepo.py
jaanevis/requests/: __init__.py  activate_user_request.py  add_note_request.py  auth_request.py  base.py  delete_note_request.py  login_request.py  logout_request.py  note_list_request.py  read_note_request.py  register_request.py  update_note_request.py  update_own_user_request.py
jaanevis/responses/: __init__.py  response.py
jaanevis/serializers/: note_geojson_serializer.py  note_json_serializer.py
jaanevis/tasks/: core.py
jaanevis/ui/: .env.template  app.js  index.html  main.css  package.json  webpack.config.js
jaanevis/usecases/: activate_user.py  add_note.py  authenticate.py  delete_note.py  login.py  logout.py  note_list.py  read_note.py  register.py  update_note.py  update_own_user.py
jaanevis/utils/: email.py  email_listener.py  event.py  geo.py  mail.py  (+3 more)
requirements/: dev.txt  prod.txt
script/: fastapi.sh  format.sh  prestart.sh  worker.sh
systemd/: jaanevis-worker.service  jaanevis.service
(+57 files in other folders)
