[tool.poetry]
name = "jaanevis"
version = "0.0.1"
description = ""
authors = ["Admin <jaaanevis@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = {extras = ["email", "dotenv"], version = "*"}
fastapi = "*"
uvicorn = "*"
httpx = "*"
argon2-cffi = "*"
reverse_geocode = "*"
emails = "*"
pytz = "^2022.7.1"
redis = "^4.5.1"
rq = "^1.13.0"

[tool.poetry.dev-dependencies]
pytest="*"
black="*"
mypy="*"
ruff="*"
isort="*"
freezegun="*"

[tool.black]
line-length = 79

[tool.mypy]
strict = false
warn_unused_ignores = false
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.ruff]
select = [
    "E",
    "W",
    "F",
    # "I",  # isort
    "C",
    "B",
]
ignore = [
    "E501",
    "B008",
]

[tool.ruff.isort]
known-third-party = ["pydantic"]

[tool.isort]
profile = "black"
